<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!--    implicitní verze knihoven s neuvedenými verzemi pro spring boot 2.4.1: -->
    <!--    https://docs.spring.io/spring-boot/docs/2.0.x/reference/html/appendix-dependency-versions.html-->

    <groupId>cz.hronza.rhrpoc</groupId>
    <artifactId>rhrpoc</artifactId>
    <version>0.0.3-SNAPSHOT</version>

    <description>rhrpoc</description>

    <modules>
        <module>poc-base</module>
        <!-- na poc-boot není vložená dependency !!a pokud by byl modul db, tak na ten také NE -->
        <module>poc-boot</module>
        <module>poc-business-logic</module>
        <module>poc-persistence</module>
        <module>poc-rest-api</module>
        <module>poc-persistence-entity</module>
        <module>poc-easy-be</module>
        <module>poc-persistence-db</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-boot-starter-actuator.version>2.7.6</spring-boot-starter-actuator.version>
        <swagger.version>2.9.2</swagger.version>
        <logstash.version>7.2</logstash.version>
        <javax.version>1.1.4</javax.version>
        <jackson-databind-nullable.version>0.1.0</jackson-databind-nullable.version>
        <log4jdbc.vesrion>1.16</log4jdbc.vesrion>
        <jacoco.version>0.8.6</jacoco.version>
        <springdoc-openapi-ui.version>1.6.13</springdoc-openapi-ui.version>
        <jakarta.persistence-api.version>2.2.3</jakarta.persistence-api.version>
    </properties>


    <packaging>pom</packaging>

    <dependencyManagement>
        <dependencies>
            <!-- INNER DEPENDENCY - na poc-boot není dependency !!a pokud by byl modul db, tak na ten také NE -->
            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-base</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-business-logic</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-persistence-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-rest-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.rhrpoc</groupId>
                <artifactId>poc-easy-be</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.core.rhrpoc</groupId>
                <artifactId>rhrpoc-core-common</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>cz.hronza.core.rhrpoc</groupId>
                <artifactId>rhrpoc-core-api</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <!--            SPRING BOOT ACTUATOR-->
            <!--            https://springframework.guru/actuator-in-spring-boot/-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${spring-boot-starter-actuator.version}</version>
            </dependency>

            <!--               SWAGGER-->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-ui</artifactId>
                <version>${springdoc-openapi-ui.version}</version>
            </dependency>


            <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 (dapp) -->
            <dependency>
                <groupId>org.bgee.log4jdbc-log4j2</groupId>
                <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
                <version>${log4jdbc.vesrion}</version>
            </dependency>


            <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder (jdz)-->
            <!--            VULNERABILITIES !!-->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
            <!--            JSR 374 (JSON processing - nepoužíváno) -->
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.json</artifactId>
                <version>${javax.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.openapitools/jackson-databind-nullable -->
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>${jakarta.persistence-api.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.5.1</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-jpa</artifactId>
                <version>2.7.4</version>
            </dependency>

        </dependencies>


    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                </plugin>
                <!--            </plugins>-->

                <!--        JDZ v DAF-->
                <!--            <plugins>-->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!--            COL v parent pom-->
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
                <!--                            <plugin>-->
                <!--                                <groupId>org.apache.maven.plugins</groupId>-->
                <!--                                <artifactId>maven-surefire-plugin</artifactId>-->
                <!--                                <version>2.22.2</version>-->
                <!--                                <configuration>-->
                <!--                                    <systemPropertyVariables>-->
                <!--                                        <hazelcast.cofing>classpath:hazelcast-test.yaml</hazelcast.cofing>-->
                <!--                                    </systemPropertyVariables>-->
                <!--                                </configuration>-->
                <!--                            </plugin>-->

            </plugins>
        </pluginManagement>
    </build>
</project>
